--- a/thesis.bib
+++ b/thesis.bib
@@ -19,7 +19,7 @@
 }
 
 @article{ Hansen:2003:CMA_ES,
-	title={Reducing the time complexity of the derandomized evolution strategy with covariance matrix adaptation (CMA-ES)},
+	title={{Reducing the time complexity of the derandomized evolution strategy with covariance matrix adaptation (CMA-ES)}},
   	author={Hansen, Nikolaus and M{\"u}ller, Sibylle D and Koumoutsakos, Petros},
   	journal={Evolutionary computation},
   	volume={11},
@@ -30,7 +30,7 @@
 }
 
 @article{ Hansen:2006:CMA_ES_review,
-	title={The CMA evolution strategy: a comparing review},
+	title={The {CMA} evolution strategy: a comparing review},
   	author={Hansen, Nikolaus},
   	journal={Towards a new evolutionary computation},
   	pages={75--102},
@@ -48,25 +48,26 @@
   organization={IEEE}
 }
 
-@article{ Kennedy:1995:PSO,
-	title={Ieee int},
-  	author={Kennedy, James and Optimization, R Eberhart Particle Swarm},
-  	booktitle={Conf. on Neural Networks},
-  	volume={4},
-  	year={1995}
+@inproceedings{ Kennedy:1995:PSO,
+    title={Particle Swarm Optimization},
+  	author={Kennedy, James and Eberhart, Russell},
+  	booktitle={Proceedings of the 1995 IEEE International Conference on Neural Networks},
+  	pages={1942--1948},
+  	year={1995},
+  	organization={IEEE}
 }
 
 @article{ Clerc:2012:SPSO2011,
 	title={Standard particle swarm optimisation},
   	author={Clerc, Maurice},
-	journal={Online at https://hal.archives-ouvertes.fr/hal-00764996/},
+	journal={Retrieved from https://hal.archives-ouvertes.fr/hal-00764996/},
   	year={2012}
 }
 
 @article{ Clerc:2007:randomTopology,
 	title={Back to random topology},
 	author={Clerc, Maurice},
-	journal={Online at http://clerc. maurice. free. fr/pso},
+	journal={Retrieved from http://clerc. maurice. free. fr/pso},
 	year={2007}
 }
 
@@ -189,21 +190,21 @@
 
 @book{ Luce:1959:softmax,
     title={Individual Choice Behavior a Theoretical Analysis},
-    author={R.. Ducan Luce},
+    author={Luce, R.Duncan},
     year={1959},
-    school={John Wiley and sons}
+    publisher={John Wiley and sons}
 }
 
 @book{ Kaelbling:1993:interval_estimation,
     title={Learning in embedded systems},
     author={Kaelbling, Leslie Pack},
     year={1993},
-    school={MIT press}
+    publisher={MIT press}
 }
 
 @article{ Suganthan:2005:benchmark,
     author={Suganthan, Ponnuthurai N and Hansen, Nikolaus and Liang, Jing J and Deb, Kalyanmoy and Chen, Ying-ping and Auger, Anne and Tiwari, Santosh},
-    title={Problem definitions and evaluation criteria for the CEC 2005 special session on real-parameter optimization},
+    title={Problem definitions and evaluation criteria for the {CEC} 2005 special session on real-parameter optimization},
     journal={KanGAL report},
     volume={2005005},
     pages={2005},
