--- a/linear_projection.tex
+++ b/linear_projection.tex
@@ -1,7 +1,7 @@
 \chapter{Linear Projection}
 \label{chapter:projection} 
 
-We would like to define a region of interest that contains only one unimodel for exploitation.
+In this chapter, the technique of defining a region of interest that contains only one unimodel for exploitation.
 Also, some algorithms, \textit{e.g.} SPSO, requires a well-defined hypercube search space with fixed-value constraints in each dimension.
 Defining the projection onto subspace can be described as a model selection.
 In our case, this process does not require high accuracy, yet has a strict demand on time consumption.
@@ -174,7 +174,7 @@ In our loss function, we considered the following features:
 We add up all the errors mentioned above and try to minimize that error. 
 Following part explains the reason for considering each features.
 
-First, we would like to keep all the particles that belong to this cluster in the boundary $[0,1]^D$.
+First, all the particles that belong to this cluster should be kept in the boundary $[0,1]^D$.
 It can easily be done by projecting all points within the cluster onto the subspace, 
 and check whether if any of the projected position is outside of the boundary $[0,1]^D$.
 
@@ -192,19 +192,19 @@ We randomly generates 200 samples within the green and blue ROI and tries to exc
 \caption{Snapshot of optimization for the projection matrix of the red ROI.}\label{fig:Sample_projection}
 \end{figure}
 
-Third, we also use the Monte Carlo method described before to make sure that the ROI does not exceed the boundaries of the orignal subspace.
+Third, the Monte Carlo method described above is adopted to make sure that the ROI does not exceed the boundaries of the orignal subspace.
 We randomly generate samples from the subspace and inverse project it back to the search space to make sure that all points are within boundaries.
 If not, we would like to minimize the distance of sample points to the nearest border.
 
-Forth, we would also like each underlying model for each subproblem 
-to be a multivariate Gaussian distribution with mean around the center $[0.5]^D$.
+Forth, each underlying model for each subproblem is desirable 
+to be a multivariate Gaussian distribution with the mean around the center $[0.5]^D$.
 If the algorithm searches near the boundary, it indicates that ROI should be updated since the optimum solution might be outside of the border.
 Placing the optimum solution at the center of the search space creates a more stable model for the algorithm to search.
 This allows a thorough search around the center, and decreases the frequency of ROI update.
 Therefore, we calculate the weighted mean of the points within the cluster on the subspace.
 Then we minimize the distance of weighted mean to the center.  
 
-Fifth, we would like the weighted covariance matrix to be approximately $0.2I$, where $I$ is an identical matrix.
+Fifth, the weighted covariance matrix of the underlying model is also prefered to be approximately $0.2I$, where $I$ is an identical matrix.
 This enables the projection matrix to rotate, scale, and shear a fitness hill.
 The normalization preprocess is a common technique to make future optimization easier.
 Therefore, we calculate the difference for each element in the weighted covariance matrix and $0.2I$.  
